<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".performanceGraphActivity"
    tools:showIn="@layout/activity_performance_graph">

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableBottom="@drawable/ic_arrow_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/chartGraph"
        android:textColor="#fff"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Button-->
        <!--android:id="@+id/button_heartRate"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginStart="44dp"-->
        <!--android:layout_marginTop="124dp"-->
        <!--android:background="@drawable/round_button"-->
        <!--android:text="heartrate"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->
    <RelativeLayout

        android:id="@+id/relativeLayout"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/name"
            android:fontFeatureSettings="@string/name"
            android:paddingRight="15dp"
            android:text="@string/value"
            android:textColor="#fff"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/radio_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/value"
            android:orientation="horizontal"

            >

            <RadioButton
                android:id="@+id/heart_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/heartrate"
                android:checked="true"
                android:textColor="#fff" />

            <RadioButton

                android:id="@+id/score_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/points"
                android:textColor="#fff"

                />
        </RadioGroup>
    </RelativeLayout>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="404dp"
        android:layout_marginTop="205dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>